--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="display">
+    <div class="main-box" >
+        <div class="big-box">
+           
+
+
+
+
+<h1 style="color: rgb(182, 118, 0);">STOP WATCH</h1>
+
+
+
+    <div class=" display">
     <p id="min">00 </p>
+    <p  style="font-size: 50px;">: </p>
 <p id="sec">00</p>
+<p  style="font-size: 50px;">: </p>
 <p id="msec">00</p>
 </div>
 <div class="control-btn">
@@ -17,7 +30,8 @@
 <button onclick="stopTimer()"id="stopBtn"  class="btns">stop</button>
 <button onclick="resetTimer()"id="resetBtn"  class="btns">reset</button>
 </div>
-
+</div>
+</div>
 <script src="script.js">
 
 </script>
